fixtures/frontend/milestone-2/invalid/ambiguous-domain-literal-suffix/main.aivi
domain Duration over Int
    suffix ms : Int = value => Duration value

domain Milliseconds over Int
    suffix ms : Int = value => Milliseconds value

value delay = 250ms
